feat: добавление функционала управления заказами с обработкой запросов на получение, отмену и получение деталей заказа
